Missing HAVE_UPDWTMPX check before using updwtmpx().

In 10.5 Mac OS X added enough utmpx support to make it past the
first two preprocessor checks around line 390 of src/smbd/utmp.c
and on to the utmpx block which uses updwtmpx().  Unfortunately,
as ./configure correctly surmised, 10.5 doesn't have that.

https://bugzilla.samba.org/show_bug.cgi?id=5184
(This used to be commit f19d1e3d93d0d9dfe80372c6c5635f1047f9aa88)